egonlang-core/res/examples/valid/block_mixed_statements_only.eg
{
    123;
    "foo";
    {};
    void;
    let a = 1357;
    (1,2,3,);
    [a, b, c];
    0..10;
    if (a > b) { c } else { d };
};