egonlang-core/res/examples/invalid/fn_expr_returning_list.eg
(a: number, b: number): list<number> => [1, 2, 3];

// out: SyntaxError: unexpected "["; expected: ["\"(\"", "\"{\""]